--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 html, body {
   margin: 0;
-  height: 100vh;
+  height: auto;
 }
 
 body {
@@ -29,7 +29,7 @@ body {
 }
 
 #map-canvas {
-  
+
 }
 
 #map-canvas-inset {
