--- a/css/styles.css
+++ b/css/styles.css
@@ -4,22 +4,33 @@ html, body {
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: 1fr 1fr;
+
 }
 
 .tick {
   stroke: black;
 }
 
+/* Page Title */
+#page-title {
+  position: absolute;
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+  pointer-events: none;
+}
+
 /* Choropleth */
 #choropleth {
+  grid-column: 2 / 3;
+  grid-row: 1 / 3;
   width: auto;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
 }
 
@@ -27,10 +38,7 @@ body {
   position: relative;
   width: auto;
   height: auto;
-}
-
-#map-canvas {
-
+  margin-top: 20px;
 }
 
 #map-canvas-inset {
@@ -58,8 +66,14 @@ body {
 }
 
 /* Climate line graph */
+#climate-title {
+  padding: 0 40px;
+  margin: 10px 0;
+}
 
 #climate-line-graph {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
   width: auto;
   display: flex;
   flex-direction: column;
@@ -68,7 +82,14 @@ body {
 }
 
 /* Energy Bar Graph */
+#energy-title {
+  padding: 0 40px;
+  margin: 10px 0;
+}
+
 #energy-bar-graph {
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
   width: auto;
   display: flex;
   flex-direction: column;
