--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,43 @@ body {
   grid-template-rows: 1fr 1fr;
 
 }
+/* Loading Icon */
+.lds-dual-ring {
+  position: absolute;
+  width: 80px;
+  height: 80px;
+}
+.lds-dual-ring:after {
+  content: " ";
+  display: block;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6px solid #fff;
+  border-color: #39ac39 transparent #39ac39 transparent;
+  animation: lds-dual-ring 1.2s linear infinite;
+}
+@keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.map-loading {
+  visibility: hidden;
+}
+
+.line-loading {
+  visibility: hidden;
+}
+
+.bar-loading {
+  visibility: hidden;
+}
 
 .tick {
   stroke: black;
