--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,11 @@ html, body {
 }
 
 body {
-  width: 100vw;
+  width: 100%;
+}
+
+p {
+  /* padding: 16px; */
 }
 
 .grid-item {
@@ -57,6 +61,15 @@ body {
   stroke: black;
 }
 
+#grid-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: auto;
+}
+
 /* Page Title */
 #page-title {
   display: flex;
@@ -64,15 +77,19 @@ body {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 10vh;
+  /* height: 10vh; */
+  pointer-events: none;
+  text-align: center;
 }
 
 #title {
-  margin: 0
+  margin: 10px 0;
+  padding: 0 20px;
 }
 
 #description {
-  margin: 0
+  margin: 10px 0;
+  padding: 0 20px;
 }
 
 /* Choropleth */
@@ -107,23 +124,15 @@ body {
   pointer-events: none;
 }
 
-/* Climate line graph */
-
-/* test */
-/* #climate-line-graph {
-  position: relative;
-  width: auto;
+#notes {
+  width: 100%;
+  padding: 16px;
 }
 
-#energy-bar-graph {
-  position: relative;
-  width: auto;
-} */
-  /* test */
+/* Climate line graph */
 
 #climate-title {
-  padding: 0 40px;
-  margin: 10px 0;
+
 }
 
 /* Energy Bar Graph */
@@ -137,7 +146,6 @@ body {
 @media only screen and (min-width: 770px) {
 
   #grid-container {
-    background-color: pink;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 2fr;
@@ -146,13 +154,13 @@ body {
   #climate-line-graph {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
-    height: 100%;
+    /* height: 100%; */
   }
 
   #energy-bar-graph {
     grid-column: 2 / 3;
     grid-row: 1 / 2;
-    height: 100%;
+    /* height: 100%; */
   }
 
   #choropleth {
@@ -161,7 +169,6 @@ body {
   }
 
 }
-
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
@@ -189,15 +196,13 @@ body {
     grid-row: 1 / 2;
   }
 
+  #climate-title {
+    margin: 50px 40px 0 40px;
+  }
+
   #choropleth {
     grid-column: 2 / 3;
     grid-row: 1 / 3;
   }
-
-  /* #climate-line-graph-plot {
-    background-color: pink;
-    height: 100%;
-    width: 100%;
-  } */
 
 }
