--- a/css/styles.css
+++ b/css/styles.css
@@ -7,10 +7,6 @@ body {
   width: 100%;
 }
 
-p {
-  /* padding: 16px; */
-}
-
 .grid-item {
   display: flex;
   flex-direction: column;
@@ -77,7 +73,6 @@ p {
   justify-content: center;
   align-items: center;
   width: 100%;
-  /* height: 10vh; */
   pointer-events: none;
   text-align: center;
 }
@@ -125,21 +120,19 @@ p {
 }
 
 #notes {
-  width: 100%;
-  padding: 16px;
+  width: 80%;
 }
 
 /* Climate line graph */
 
 #climate-title {
-
+  padding: 0 30px;
 }
 
 /* Energy Bar Graph */
 
 #energy-title {
-  padding: 0 40px;
-  margin: 10px 0;
+  padding: 0 30px;
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
@@ -154,13 +147,11 @@ p {
   #climate-line-graph {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
-    /* height: 100%; */
   }
 
   #energy-bar-graph {
     grid-column: 2 / 3;
     grid-row: 1 / 2;
-    /* height: 100%; */
   }
 
   #choropleth {
@@ -174,7 +165,6 @@ p {
 @media only screen and (min-width: 1200px) {
 
   #grid-container {
-    width: 100vw;
     height: 100vh;
     display: grid;
     grid-template-columns: 1fr 2fr;
@@ -188,7 +178,6 @@ p {
   #energy-bar-graph {
     grid-column: 1 / 2;
     grid-row: 2 / 3;
-
   }
 
   #climate-line-graph {
@@ -197,7 +186,7 @@ p {
   }
 
   #climate-title {
-    margin: 50px 40px 0 40px;
+    margin: 50px 40px 20px 40px;
   }
 
   #choropleth {
